[package]
name = "nrf91"
version = "0.2.0"
authors = ["Fredrik Ahlberg <fredrik@z80.se>"]
description = "Device support crate for nRF9160"
license = "0BSD"
categories = ["embedded"]
keywords = [
    "no-std",
    "arm",
    "cortex-m",
    "nordic",
]
repository = "https://github.com/nrf-rs/nrf91"

[dependencies]
bare-metal = "0.2.0"
cortex-m = "0.6"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.7"

[features]
rt = ["cortex-m-rt/device"]
